[feat] HomeView UI 수정 및 ViewModel구현 - User > UserObject 변환 - GeneralView 생성(Error/Loading/PlaceHolder/SearchBarButton) - Firbase 데이터 관련 로직 추가 - HomeView 의 비지니스 로직 추가

--- a/ChatApp_SwiftUI/GoogleService-Info.plist
+++ b/ChatApp_SwiftUI/GoogleService-Info.plist
@@ -30,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:963025578719:ios:a87efeffc3262822c7576a</string>
+	<key>DATABASE_URL</key>
+	<string>https://swiftui-chatapp-5a3cd-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
